# hex-master

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/bootstrap/: Cargo.toml
apps/bootstrap/src/: main.rs
apps/desktop/: CMakeLists.txt
apps/desktop/include/: file_byte_source.hpp  hex_bridge.h  hex_view.hpp  main_window.hpp  structure_schema.hpp
apps/desktop/src/: file_byte_source.cpp  hex_view.cpp  main.cpp  main_window.cpp  structure_schema.cpp
crates/hexapp-analysis/: Cargo.toml
crates/hexapp-analysis/src/: lib.rs
crates/hexapp-core/: Cargo.toml
crates/hexapp-core/src/: lib.rs
crates/hexapp-ffi/: Cargo.toml
crates/hexapp-ffi/src/: lib.rs
crates/hexapp-inspector/: Cargo.toml
crates/hexapp-inspector/src/: lib.rs
crates/hexapp-io/: Cargo.toml
crates/hexapp-io/src/: lib.rs
crates/hexapp-search/: Cargo.toml
crates/hexapp-search/src/: lib.rs
crates/hexapp-session/: Cargo.toml
crates/hexapp-session/src/: lib.rs
docs/: RELEASE.md  index.html  schema-guide.html  site.css
docs/examples/: item_obj.hms
docs/project/: ARCHITECTURE.md  BUILD.md  MVP_CHECKLIST.md  PRODUCT_SPEC.md  RELEASE.md  ROADMAP.md  SCHEMA_GUIDE.md
scripts/: bootstrap.ps1  build.ps1
ui/qt-shell/: CMakeLists.txt
ui/qt-shell/include/: file_byte_source.hpp  hex_bridge.h  hex_view.hpp  main_window.hpp
ui/qt-shell/resources/: app_icon.rc  app_resources.qrc  app_version.rc.in
ui/qt-shell/src/: file_byte_source.cpp  hex_view.cpp  main.cpp  main_window.cpp
ui/qt/src/: main.rs
