[workspace]
members = [
    "crates/hexapp-analysis",
    "crates/hexapp-core",
    "crates/hexapp-ffi",
    "crates/hexapp-inspector",
    "crates/hexapp-io",
    "crates/hexapp-search",
    "crates/hexapp-session",
    "ui/qt",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["hex_master contributors"]
repository = "https://example.invalid/hex_master"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
